--- a/styles.css
+++ b/styles.css
@@ -240,6 +240,9 @@ nav {
   padding: 0 20px;
   width: 100%;
 }
+.menu-header h2 {
+  width: 90%;
+}
 .view-more-btn {
   font-weight: 300;
   border: none;
@@ -268,7 +271,7 @@ nav {
 .menu-item {
   height: 400px;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.15);
-  width: 30%;
+  max-width: 28%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -285,6 +288,7 @@ nav {
   padding: 10px;
 }
 .food-name {
+  text-align: center;
   font-size: 26px;
   font-weight: 500;
 }
